--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@
 
 body {
   padding: 60px;
-  background: rgb(30,30,181);
-  background: radial-gradient(circle, rgba(30,30,181,1) 3%, rgba(32,25,148,1) 43%);
+  background: rgb(30, 30, 181);
+  background: radial-gradient(circle, rgb(30, 30, 181) 3%, rgb(32, 25, 148) 43%);
 }
 
 .form-wrapper {
   background-color: #fff;
   width: 100%;
   max-width: 350px;
-  padding: 50px 70px 50px 30px;;
-  box-shadow: 0 2px 3px rgba(0,0,0,0.25);
+  padding: 50px 70px 50px 30px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
   margin: auto;
 }
@@ -32,27 +32,27 @@ body {
   position: relative;
 }
 
-.icon{
+.icon {
   position: absolute;
   top: 18%;
   right: 0%;
 }
 
-.i-success{
+.i-success {
   color: #00a000;
   visibility: hidden;
 }
 
-.success .i-success{
+.success .i-success {
   visibility: visible;
 }
 
-.i-error{
+.i-error {
   color: #f00;
   visibility: hidden;
 }
 
-.error .i-error{
+.error .i-error {
   visibility: visible;
 }
 
@@ -99,4 +99,4 @@ body {
   font-size: 15px;
   border-radius: 3px;
   padding: 8px 20px;
-}
+}/*# sourceMappingURL=style.css.map */
